// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden runy nad reálným obsahem > seed 7, greedy-affinity, 4 hráči, Brody 1`] = `
[
  {
    "cile": [
      {
        "cil": "prsty-ve-vsem",
        "postava": "postava-1",
      },
      {
        "cil": "cisty-stit",
        "postava": "postava-2",
      },
      {
        "cil": "frajer-v-klidu",
        "postava": "postava-3",
      },
      {
        "cil": "kupecke-slovo",
        "postava": "postava-4",
      },
    ],
    "nodeIndex": 0,
    "postavy": [
      "postava-1",
      "postava-2",
      "postava-3",
      "postava-4",
    ],
    "pronasledovatel": "serif-brody",
    "seed": 7,
    "seq": 1,
    "type": "run_started",
    "verzeObsahu": "e95ef1a1",
    "verzePravidel": "v0.1 / prototyp-mvp.md 2026-07-22 (po D7–D11)",
  },
  {
    "nabidnuto": [
      "rival-prepad",
      "most-hlidka",
    ],
    "nodeIndex": 1,
    "seq": 2,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 1,
    "seq": 3,
    "type": "route_chosen",
    "volba": "rival-prepad",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "dedeckova-brokovnice",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 1,
    "postava": "postava-1",
    "seq": 4,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "sekacek-na-led",
      "sila": 2,
      "tag": "nasili",
    },
    "nodeIndex": 1,
    "postava": "postava-2",
    "seq": 5,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "flaska-pres-palici",
      "sila": 2,
      "tag": "nasili",
    },
    "nodeIndex": 1,
    "postava": "postava-3",
    "seq": 6,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "mosazny-boxer",
      "sila": 2,
      "tag": "nasili",
    },
    "nodeIndex": 1,
    "postava": "postava-4",
    "seq": 7,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 1,
    "novaHodnota": 2,
    "seq": 8,
    "type": "heat_changed",
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 9,
    "sila": 3,
    "soucet": 11,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 1,
    "novaHodnota": 4,
    "seq": 10,
    "type": "heat_changed",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-2",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 11,
    "sila": 2,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 1,
    "novaHodnota": 6,
    "seq": 12,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 1,
    "prah": 5,
    "seq": 13,
    "type": "heat_threshold",
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 14,
    "sila": 2,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 1,
    "novaHodnota": 8,
    "seq": 15,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 1,
    "prah": 7,
    "seq": 16,
    "type": "heat_threshold",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 17,
    "sila": 2,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": true,
          "id": "dedeckova-brokovnice",
          "nazev": "Dědečkova brokovnice",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 11,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": true,
          "id": "sekacek-na-led",
          "nazev": "Sekáček na led",
          "sila": 2,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": true,
          "id": "flaska-pres-palici",
          "nazev": "Flaška přes palici",
          "sila": 2,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": true,
          "id": "mosazny-boxer",
          "nazev": "Mosazný boxer",
          "sila": 2,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Přepadení rivalů",
    "nodeIndex": 1,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 0,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": false,
    "seq": 18,
    "type": "node_resolved",
    "uzel": "rival-prepad",
    "zar": 8,
    "zbyvaBeden": 6,
  },
  {
    "nodeIndex": 1,
    "pronasledovatel": "serif-brody",
    "seq": 19,
    "type": "ambush_inserted",
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "obalka-pro-starostu",
      "sila": 2,
      "tag": "uplatek",
    },
    "nodeIndex": 1,
    "postava": "postava-1",
    "seq": 20,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "falesna-kontrola",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 1,
    "postava": "postava-2",
    "seq": 21,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "clun-po-kanale",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 1,
    "postava": "postava-3",
    "seq": 22,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "bankovka-do-dlane",
      "sila": 2,
      "tag": "uplatek",
    },
    "nodeIndex": 1,
    "postava": "postava-4",
    "seq": 23,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 24,
    "sila": 2,
    "soucet": 10,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 1,
    "pocetZraneni": 1,
    "postava": "postava-2",
    "seq": 25,
    "type": "injury_added",
  },
  {
    "delta": 2,
    "duvod": "tvrdost_uzlu",
    "nodeIndex": 1,
    "novaHodnota": 10,
    "seq": 26,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 1,
    "prah": 10,
    "seq": 27,
    "type": "heat_threshold",
  },
  {
    "afinita": 0,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "selhani",
    "postava": "postava-2",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 28,
    "sila": 3,
    "soucet": 4,
    "tvrdostAplikovana": "zar",
    "type": "check_resolved",
  },
  {
    "afinita": 0,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 29,
    "sila": 3,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 30,
    "sila": 2,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "lecka",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "obalka-pro-starostu",
          "nazev": "Obálka pro starostu",
          "sila": 2,
          "tag": "uplatek",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 10,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "falesna-kontrola",
          "nazev": "Falešná kontrola",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "selhani",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 4,
        "tvrdost_aplikovana": "zar",
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": false,
          "id": "clun-po-kanale",
          "nazev": "Člun po kanále",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": false,
          "id": "bankovka-do-dlane",
          "nazev": "Bankovka do dlaně",
          "sila": 2,
          "tag": "uplatek",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Léčka: Okresní šerif Brody",
    "nodeIndex": 1,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 0,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": true,
    "seq": 31,
    "type": "node_resolved",
    "uzel": "serif-brody-lecka",
    "zar": 10,
    "zbyvaBeden": 6,
  },
  {
    "nodeIndex": 1,
    "pronasledovatel": "serif-brody",
    "seq": 32,
    "type": "confrontation_started",
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "sklep-u-strejdy",
      "sila": 2,
      "tag": "utek",
    },
    "nodeIndex": 1,
    "postava": "postava-1",
    "seq": 33,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "pohrebni-vuz",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 1,
    "postava": "postava-2",
    "seq": 34,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zkratka-pres-pole",
      "sila": 2,
      "tag": "utek",
    },
    "nodeIndex": 1,
    "postava": "postava-3",
    "seq": 35,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "seno-na-korbe",
      "sila": 1,
      "tag": "utek",
    },
    "nodeIndex": 1,
    "postava": "postava-4",
    "seq": 36,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 37,
    "sila": 2,
    "soucet": 10,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 0,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-2",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 38,
    "sila": 3,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 39,
    "sila": 2,
    "soucet": 10,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 40,
    "sila": 1,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "konfrontace",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "sklep-u-strejdy",
          "nazev": "Sklep u strejdy",
          "sila": 2,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 10,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "pohrebni-vuz",
          "nazev": "Pohřební vůz",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "zkratka-pres-pole",
          "nazev": "Zkratka přes pole",
          "sila": 2,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 10,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": false,
          "id": "seno-na-korbe",
          "nazev": "Seno na korbě",
          "sila": 1,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Konfrontace: Okresní šerif Brody",
    "nodeIndex": 1,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 0,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": false,
    "seq": 41,
    "type": "node_resolved",
    "uzel": "serif-brody-konfrontace",
    "zar": 10,
    "zbyvaBeden": 6,
  },
  {
    "delta": -7,
    "duvod": "preziti_konfrontace",
    "nodeIndex": 1,
    "novaHodnota": 3,
    "seq": 42,
    "type": "heat_changed",
  },
  {
    "nabidnuto": [
      "mesto-houkacky",
      "farmar-stodola",
    ],
    "nodeIndex": 2,
    "seq": 43,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 2,
    "seq": 44,
    "type": "route_chosen",
    "volba": "farmar-stodola",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "svatebni-dar",
      "sila": 1,
      "tag": "lest",
    },
    "nodeIndex": 2,
    "postava": "postava-1",
    "seq": 45,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "konve-na-mleko",
      "sila": 2,
      "tag": "lest",
    },
    "nodeIndex": 2,
    "postava": "postava-2",
    "seq": 46,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "knezsky-kolarek",
      "sila": 2,
      "tag": "lest",
    },
    "nodeIndex": 2,
    "postava": "postava-3",
    "seq": 47,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zkazena-tlacenka",
      "sila": 2,
      "tag": "lest",
    },
    "nodeIndex": 2,
    "postava": "postava-4",
    "seq": 48,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 49,
    "sila": 1,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 2,
    "pocetZraneni": 2,
    "postava": "postava-2",
    "seq": 50,
    "type": "injury_added",
  },
  {
    "karta": "kocovina",
    "nodeIndex": 2,
    "pocetZraneni": 2,
    "postava": "postava-2",
    "seq": 51,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-2",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 52,
    "sila": 2,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 53,
    "sila": 2,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 54,
    "sila": 2,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": false,
          "id": "svatebni-dar",
          "nazev": "Svatební dar",
          "sila": 1,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "konve-na-mleko",
          "nazev": "Konve na mléko",
          "sila": 2,
          "tag": "lest",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": false,
          "id": "knezsky-kolarek",
          "nazev": "Kněžský kolárek",
          "sila": 2,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": false,
          "id": "zkazena-tlacenka",
          "nazev": "Zkažená tlačenka",
          "sila": 2,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Stodola u Batavie",
    "nodeIndex": 2,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 0,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": false,
    "seq": 55,
    "type": "node_resolved",
    "uzel": "farmar-stodola",
    "zar": 3,
    "zbyvaBeden": 6,
  },
  {
    "nabidnuto": [
      "privoz-celnik",
      "rival-parley",
    ],
    "nodeIndex": 3,
    "seq": 56,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 3,
    "seq": 57,
    "type": "route_chosen",
    "volba": "privoz-celnik",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "skok-do-reky",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 3,
    "postava": "postava-1",
    "seq": 58,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "bedna-na-ochutnavku",
      "sila": 3,
      "tag": "uplatek",
    },
    "nodeIndex": 3,
    "postava": "postava-2",
    "seq": 59,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "flaska-pro-serifa",
      "sila": 1,
      "tag": "uplatek",
    },
    "nodeIndex": 3,
    "postava": "postava-3",
    "seq": 60,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "vyplata-dopredu",
      "sila": 3,
      "tag": "uplatek",
    },
    "nodeIndex": 3,
    "postava": "postava-4",
    "seq": 61,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "afinita": 0,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 62,
    "sila": 3,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": -2,
    "nodeIndex": 3,
    "pasmo": "uspech",
    "postava": "postava-2",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 63,
    "sila": 3,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 64,
    "sila": 1,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 65,
    "sila": 3,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": false,
          "id": "skok-do-reky",
          "nazev": "Skok do řeky",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "bedna-na-ochutnavku",
          "nazev": "Bedna na ochutnávku",
          "sila": 3,
          "tag": "uplatek",
        },
        "pasmo": "uspech",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": false,
          "id": "flaska-pro-serifa",
          "nazev": "Láhev pro šerifa",
          "sila": 1,
          "tag": "uplatek",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": false,
          "id": "vyplata-dopredu",
          "nazev": "Výplata dopředu",
          "sila": 3,
          "tag": "uplatek",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Přívoz s celníkem",
    "nodeIndex": 3,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 0,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": false,
    "seq": 66,
    "type": "node_resolved",
    "uzel": "privoz-celnik",
    "zar": 3,
    "zbyvaBeden": 6,
  },
  {
    "nabidnuto": [
      "urednik-vaha",
      "farmar-brod",
    ],
    "nodeIndex": 4,
    "seq": 67,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 4,
    "seq": 68,
    "type": "route_chosen",
    "volba": "urednik-vaha",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "salva-do-stropu",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 4,
    "postava": "postava-1",
    "seq": 69,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zkratka-pres-pole",
      "sila": 2,
      "tag": "utek",
    },
    "nodeIndex": 4,
    "postava": "postava-2",
    "seq": 70,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "mosazny-boxer",
      "sila": 2,
      "tag": "nasili",
    },
    "nodeIndex": 4,
    "postava": "postava-3",
    "seq": 71,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "dedeckova-brokovnice",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 4,
    "postava": "postava-4",
    "seq": 72,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 4,
    "novaHodnota": 5,
    "seq": 73,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 4,
    "prah": 5,
    "seq": 74,
    "type": "heat_threshold",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 75,
    "sila": 3,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "duvod": "rider_utek",
    "nodeIndex": 4,
    "postava": "postava-2",
    "seq": 76,
    "type": "crate_lost",
    "zbyvaBeden": 5,
  },
  {
    "duvod": "tvrdost_uzlu",
    "nodeIndex": 4,
    "postava": "postava-2",
    "seq": 77,
    "type": "crate_lost",
    "zbyvaBeden": 4,
  },
  {
    "afinita": 0,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "selhani",
    "postava": "postava-2",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": {
      "typ": "utek",
      "volba": "bedna",
    },
    "seq": 78,
    "sila": 2,
    "soucet": 3,
    "tvrdostAplikovana": "bedna",
    "type": "check_resolved",
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 4,
    "novaHodnota": 7,
    "seq": 79,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 4,
    "prah": 7,
    "seq": 80,
    "type": "heat_threshold",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 81,
    "sila": 2,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 4,
    "novaHodnota": 9,
    "seq": 82,
    "type": "heat_changed",
  },
  {
    "afinita": 2,
    "hod": 2,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 83,
    "sila": 3,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "selhani_v_uzlu",
    "nodeIndex": 4,
    "novaHodnota": 10,
    "seq": 84,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 4,
    "prah": 10,
    "seq": 85,
    "type": "heat_threshold",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": true,
          "id": "salva-do-stropu",
          "nazev": "Salva do stropu",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 2,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "zkratka-pres-pole",
          "nazev": "Zkratka přes pole",
          "sila": 2,
          "tag": "utek",
        },
        "pasmo": "selhani",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": {
          "typ": "utek",
          "volba": "bedna",
        },
        "soucet": 3,
        "tvrdost_aplikovana": "bedna",
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": true,
          "id": "mosazny-boxer",
          "nazev": "Mosazný boxer",
          "sila": 2,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 2,
        "karta": {
          "hlucna": true,
          "id": "dedeckova-brokovnice",
          "nazev": "Dědečkova brokovnice",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Vážní stanice",
    "nodeIndex": 4,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 0,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": true,
    "seq": 86,
    "type": "node_resolved",
    "uzel": "urednik-vaha",
    "zar": 10,
    "zbyvaBeden": 4,
  },
  {
    "nodeIndex": 4,
    "pronasledovatel": "serif-brody",
    "seq": 87,
    "type": "confrontation_started",
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "sklep-u-strejdy",
      "sila": 2,
      "tag": "utek",
    },
    "nodeIndex": 4,
    "postava": "postava-1",
    "seq": 88,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "obalka-pro-starostu",
      "sila": 2,
      "tag": "uplatek",
    },
    "nodeIndex": 4,
    "postava": "postava-2",
    "seq": 89,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "bocni-ulicka",
      "sila": 1,
      "tag": "utek",
    },
    "nodeIndex": 4,
    "postava": "postava-3",
    "seq": 90,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zadni-vratka",
      "sila": 1,
      "tag": "utek",
    },
    "nodeIndex": 4,
    "postava": "postava-4",
    "seq": 91,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "nodeIndex": 4,
    "pocetZraneni": 1,
    "postava": "postava-1",
    "seq": 92,
    "type": "injury_added",
  },
  {
    "afinita": 2,
    "hod": 2,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 93,
    "sila": 2,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "duvod": "rider_uplatek",
    "nodeIndex": 4,
    "postava": "postava-2",
    "seq": 94,
    "type": "crate_lost",
    "zbyvaBeden": 3,
  },
  {
    "nodeIndex": 4,
    "pocetZraneni": 3,
    "postava": "postava-2",
    "seq": 95,
    "type": "injury_added",
  },
  {
    "karta": "zbrklost",
    "nodeIndex": 4,
    "pocetZraneni": 3,
    "postava": "postava-2",
    "seq": 96,
    "type": "cursed_drawn",
  },
  {
    "afinita": 0,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-2",
    "postihZraneni": 2,
    "povysenoZeSelhani": true,
    "rider": {
      "typ": "uplatek",
      "volba": "zaplatit_bednu",
    },
    "seq": 97,
    "sila": 2,
    "soucet": 3,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 4,
    "pocetZraneni": 1,
    "postava": "postava-3",
    "seq": 98,
    "type": "injury_added",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 99,
    "sila": 1,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 4,
    "pocetZraneni": 1,
    "postava": "postava-4",
    "seq": 100,
    "type": "injury_added",
  },
  {
    "afinita": 2,
    "hod": 2,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 101,
    "sila": 1,
    "soucet": 5,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "konfrontace",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 2,
        "karta": {
          "hlucna": false,
          "id": "sklep-u-strejdy",
          "nazev": "Sklep u strejdy",
          "sila": 2,
          "tag": "utek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 1,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "obalka-pro-starostu",
          "nazev": "Obálka pro starostu",
          "sila": 2,
          "tag": "uplatek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-2",
        "povyseno_ze_selhani": true,
        "rider": {
          "typ": "uplatek",
          "volba": "zaplatit_bednu",
        },
        "soucet": 3,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "bocni-ulicka",
          "nazev": "Boční ulička",
          "sila": 1,
          "tag": "utek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 2,
        "karta": {
          "hlucna": false,
          "id": "zadni-vratka",
          "nazev": "Zadní vrátka",
          "sila": 1,
          "tag": "utek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 5,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Konfrontace: Okresní šerif Brody",
    "nodeIndex": 4,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 1,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": false,
    "seq": 102,
    "type": "node_resolved",
    "uzel": "serif-brody-konfrontace",
    "zar": 10,
    "zbyvaBeden": 3,
  },
  {
    "delta": -7,
    "duvod": "preziti_konfrontace",
    "nodeIndex": 4,
    "novaHodnota": 3,
    "seq": 103,
    "type": "heat_changed",
  },
  {
    "nabidnuto": [
      "nadrazi-vypravci",
      "deputy-hlidka",
    ],
    "nodeIndex": 5,
    "seq": 104,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 5,
    "seq": 105,
    "type": "route_chosen",
    "volba": "nadrazi-vypravci",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "pytel-cementu",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 5,
    "postava": "postava-1",
    "seq": 106,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": true,
      "id": "rudo-pred-ocima",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 5,
    "postava": "postava-2",
    "seq": 107,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "sekacek-na-led",
      "sila": 2,
      "tag": "nasili",
    },
    "nodeIndex": 5,
    "postava": "postava-3",
    "seq": 108,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "flaska-pres-palici",
      "sila": 2,
      "tag": "nasili",
    },
    "nodeIndex": 5,
    "postava": "postava-4",
    "seq": 109,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 5,
    "novaHodnota": 5,
    "seq": 110,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 5,
    "prah": 5,
    "seq": 111,
    "type": "heat_threshold",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 112,
    "sila": 3,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 5,
    "novaHodnota": 7,
    "seq": 113,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 5,
    "prah": 7,
    "seq": 114,
    "type": "heat_threshold",
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "uspech",
    "postava": "postava-2",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 115,
    "sila": 3,
    "soucet": 10,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 5,
    "novaHodnota": 9,
    "seq": 116,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 5,
    "pocetZraneni": 2,
    "postava": "postava-3",
    "seq": 117,
    "type": "injury_added",
  },
  {
    "karta": "ztrata-dustojnosti",
    "nodeIndex": 5,
    "pocetZraneni": 2,
    "postava": "postava-3",
    "seq": 118,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-3",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 119,
    "sila": 2,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "hlucna_karta",
    "nodeIndex": 5,
    "novaHodnota": 10,
    "seq": 120,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 5,
    "prah": 10,
    "seq": 121,
    "type": "heat_threshold",
  },
  {
    "nodeIndex": 5,
    "pocetZraneni": 2,
    "postava": "postava-4",
    "seq": 122,
    "type": "injury_added",
  },
  {
    "karta": "podvrtnuty-kotnik",
    "nodeIndex": 5,
    "pocetZraneni": 2,
    "postava": "postava-4",
    "seq": 123,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-4",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 124,
    "sila": 2,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": true,
          "id": "pytel-cementu",
          "nazev": "Pytel cementu",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 5,
        "karta": {
          "hlucna": true,
          "id": "rudo-pred-ocima",
          "nazev": "Rudo před očima",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 10,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": true,
          "id": "sekacek-na-led",
          "nazev": "Sekáček na led",
          "sila": 2,
          "tag": "nasili",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": true,
          "id": "flaska-pres-palici",
          "nazev": "Flaška přes palici",
          "sila": 2,
          "tag": "nasili",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Seřaďovací nádraží",
    "nodeIndex": 5,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 2,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": false,
    "seq": 125,
    "type": "node_resolved",
    "uzel": "nadrazi-vypravci",
    "zar": 10,
    "zbyvaBeden": 3,
  },
  {
    "nodeIndex": 5,
    "pronasledovatel": "serif-brody",
    "seq": 126,
    "type": "confrontation_started",
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "clun-po-kanale",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 5,
    "postava": "postava-1",
    "seq": 127,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "knezsky-kolarek",
      "sila": 2,
      "tag": "lest",
    },
    "nodeIndex": 5,
    "postava": "postava-2",
    "seq": 128,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zkazena-tlacenka",
      "sila": 2,
      "tag": "lest",
    },
    "nodeIndex": 5,
    "postava": "postava-3",
    "seq": 129,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "falesna-kontrola",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 5,
    "postava": "postava-4",
    "seq": 130,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 131,
    "sila": 3,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 5,
    "pocetZraneni": 4,
    "postava": "postava-2",
    "seq": 132,
    "type": "injury_added",
  },
  {
    "nodeIndex": 5,
    "pocetZraneni": 4,
    "postava": "postava-2",
    "seq": 133,
    "type": "character_down",
  },
  {
    "afinita": 0,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "selhani",
    "postava": "postava-2",
    "postihZraneni": 3,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 134,
    "sila": 2,
    "soucet": 2,
    "tvrdostAplikovana": "zraneni",
    "type": "check_resolved",
  },
  {
    "nodeIndex": 5,
    "pocetZraneni": 3,
    "postava": "postava-3",
    "seq": 135,
    "type": "injury_added",
  },
  {
    "karta": "nutkani-ochutnat",
    "nodeIndex": 5,
    "pocetZraneni": 3,
    "postava": "postava-3",
    "seq": 136,
    "type": "cursed_drawn",
  },
  {
    "nodeIndex": 5,
    "pocetZraneni": 4,
    "postava": "postava-3",
    "seq": 137,
    "type": "injury_added",
  },
  {
    "nodeIndex": 5,
    "pocetZraneni": 4,
    "postava": "postava-3",
    "seq": 138,
    "type": "character_down",
  },
  {
    "afinita": 0,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "selhani",
    "postava": "postava-3",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 139,
    "sila": 2,
    "soucet": 3,
    "tvrdostAplikovana": "zraneni",
    "type": "check_resolved",
  },
  {
    "afinita": 0,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 140,
    "sila": 3,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "konfrontace",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": false,
          "id": "clun-po-kanale",
          "nazev": "Člun po kanále",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "knezsky-kolarek",
          "nazev": "Kněžský kolárek",
          "sila": 2,
          "tag": "lest",
        },
        "pasmo": "selhani",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 2,
        "tvrdost_aplikovana": "zraneni",
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "zkazena-tlacenka",
          "nazev": "Zkažená tlačenka",
          "sila": 2,
          "tag": "lest",
        },
        "pasmo": "selhani",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 3,
        "tvrdost_aplikovana": "zraneni",
        "zoufala": false,
        "zraneni_pridana": 2,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "falesna-kontrola",
          "nazev": "Falešná kontrola",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Konfrontace: Okresní šerif Brody",
    "nodeIndex": 5,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-2",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-3",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 2,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": true,
    "seq": 141,
    "type": "node_resolved",
    "uzel": "serif-brody-konfrontace",
    "zar": 10,
    "zbyvaBeden": 3,
  },
  {
    "delta": -7,
    "duvod": "preziti_konfrontace",
    "nodeIndex": 5,
    "novaHodnota": 3,
    "seq": 142,
    "type": "heat_changed",
  },
  {
    "nabidnuto": [
      "urednik-razitko",
      "farmar-brod",
    ],
    "nodeIndex": 6,
    "seq": 143,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 6,
    "seq": 144,
    "type": "route_chosen",
    "volba": "urednik-razitko",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "svatebni-dar",
      "sila": 1,
      "tag": "lest",
    },
    "nodeIndex": 6,
    "postava": "postava-1",
    "seq": 145,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "pohrebni-vuz",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 6,
    "postava": "postava-4",
    "seq": 146,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "nodeIndex": 6,
    "pocetZraneni": 2,
    "postava": "postava-1",
    "seq": 147,
    "type": "injury_added",
  },
  {
    "karta": "prazdne-kapsy",
    "nodeIndex": 6,
    "pocetZraneni": 2,
    "postava": "postava-1",
    "seq": 148,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 6,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-1",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 149,
    "sila": 1,
    "soucet": 5,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 2,
    "nodeIndex": 6,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 150,
    "sila": 3,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "svatebni-dar",
          "nazev": "Svatební dar",
          "sila": 1,
          "tag": "lest",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 5,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": false,
          "id": "pohrebni-vuz",
          "nazev": "Pohřební vůz",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Chybějící razítko",
    "nodeIndex": 6,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-2",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-3",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 2,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": false,
    "seq": 151,
    "type": "node_resolved",
    "uzel": "urednik-razitko",
    "zar": 3,
    "zbyvaBeden": 3,
  },
  {
    "cile": [
      {
        "body": 3,
        "cil": "prsty-ve-vsem",
        "postava": "postava-1",
        "splnen": true,
        "textovy": false,
      },
      {
        "body": 0,
        "cil": "cisty-stit",
        "postava": "postava-2",
        "splnen": false,
        "textovy": false,
      },
      {
        "body": 0,
        "cil": "frajer-v-klidu",
        "postava": "postava-3",
        "splnen": false,
        "textovy": false,
      },
      {
        "body": 2,
        "cil": "kupecke-slovo",
        "postava": "postava-4",
        "splnen": true,
        "textovy": false,
      },
    ],
    "nodeIndex": 6,
    "pocetUzlu": 6,
    "pricina": "doruceno",
    "seq": 152,
    "type": "run_ended",
    "vysledek": "DORUCENO",
    "zar": 3,
    "zbyvaBeden": 3,
  },
]
`;

exports[`golden runy nad reálným obsahem > seed 42, greedy-affinity, 4 hráči, Malone 1`] = `
[
  {
    "cile": [
      {
        "cil": "samou-modrinu",
        "postava": "postava-1",
      },
      {
        "cil": "frajer-v-klidu",
        "postava": "postava-2",
      },
      {
        "cil": "obetni-beranek",
        "postava": "postava-3",
      },
      {
        "cil": "mozek-operace",
        "postava": "postava-4",
      },
    ],
    "nodeIndex": 0,
    "postavy": [
      "postava-1",
      "postava-2",
      "postava-3",
      "postava-4",
    ],
    "pronasledovatel": "agent-malone",
    "seed": 42,
    "seq": 1,
    "type": "run_started",
    "verzeObsahu": "e95ef1a1",
    "verzePravidel": "v0.1 / prototyp-mvp.md 2026-07-22 (po D7–D11)",
  },
  {
    "nabidnuto": [
      "farmar-stodola",
      "most-hlidka",
    ],
    "nodeIndex": 1,
    "seq": 2,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 1,
    "seq": 3,
    "type": "route_chosen",
    "volba": "most-hlidka",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "mosazny-boxer",
      "sila": 2,
      "tag": "nasili",
    },
    "nodeIndex": 1,
    "postava": "postava-1",
    "seq": 4,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "klika-od-vozu",
      "sila": 1,
      "tag": "nasili",
    },
    "nodeIndex": 1,
    "postava": "postava-2",
    "seq": 5,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "sekacek-na-led",
      "sila": 2,
      "tag": "nasili",
    },
    "nodeIndex": 1,
    "postava": "postava-3",
    "seq": 6,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "dedeckova-brokovnice",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 1,
    "postava": "postava-4",
    "seq": 7,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "delta": 1,
    "duvod": "hlucna_karta",
    "nodeIndex": 1,
    "novaHodnota": 1,
    "seq": 8,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 1,
    "pocetZraneni": 1,
    "postava": "postava-1",
    "seq": 9,
    "type": "injury_added",
  },
  {
    "afinita": 2,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 10,
    "sila": 2,
    "soucet": 5,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "hlucna_karta",
    "nodeIndex": 1,
    "novaHodnota": 2,
    "seq": 11,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 1,
    "pocetZraneni": 1,
    "postava": "postava-2",
    "seq": 12,
    "type": "injury_added",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-2",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 13,
    "sila": 1,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "hlucna_karta",
    "nodeIndex": 1,
    "novaHodnota": 3,
    "seq": 14,
    "type": "heat_changed",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 15,
    "sila": 2,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "hlucna_karta",
    "nodeIndex": 1,
    "novaHodnota": 4,
    "seq": 16,
    "type": "heat_changed",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 17,
    "sila": 3,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 1,
        "karta": {
          "hlucna": true,
          "id": "mosazny-boxer",
          "nazev": "Mosazný boxer",
          "sila": 2,
          "tag": "nasili",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 5,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": true,
          "id": "klika-od-vozu",
          "nazev": "Klika od vozu",
          "sila": 1,
          "tag": "nasili",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": true,
          "id": "sekacek-na-led",
          "nazev": "Sekáček na led",
          "sila": 2,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": true,
          "id": "dedeckova-brokovnice",
          "nazev": "Dědečkova brokovnice",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Most přes Hudson",
    "nodeIndex": 1,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 0,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": false,
    "seq": 18,
    "type": "node_resolved",
    "uzel": "most-hlidka",
    "zar": 4,
    "zbyvaBeden": 6,
  },
  {
    "nabidnuto": [
      "mesto-ulicka",
      "rival-parley",
    ],
    "nodeIndex": 2,
    "seq": 19,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 2,
    "seq": 20,
    "type": "route_chosen",
    "volba": "rival-parley",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "bankovka-do-dlane",
      "sila": 2,
      "tag": "uplatek",
    },
    "nodeIndex": 2,
    "postava": "postava-1",
    "seq": 21,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "obalka-pro-starostu",
      "sila": 2,
      "tag": "uplatek",
    },
    "nodeIndex": 2,
    "postava": "postava-2",
    "seq": 22,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "vyplata-dopredu",
      "sila": 3,
      "tag": "uplatek",
    },
    "nodeIndex": 2,
    "postava": "postava-3",
    "seq": 23,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "bedna-na-ochutnavku",
      "sila": 3,
      "tag": "uplatek",
    },
    "nodeIndex": 2,
    "postava": "postava-4",
    "seq": 24,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 25,
    "sila": 2,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 2,
    "pocetZraneni": 2,
    "postava": "postava-2",
    "seq": 26,
    "type": "injury_added",
  },
  {
    "karta": "nutkani-ochutnat",
    "nodeIndex": 2,
    "pocetZraneni": 2,
    "postava": "postava-2",
    "seq": 27,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-2",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 28,
    "sila": 2,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 29,
    "sila": 3,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 30,
    "sila": 3,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "bankovka-do-dlane",
          "nazev": "Bankovka do dlaně",
          "sila": 2,
          "tag": "uplatek",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "obalka-pro-starostu",
          "nazev": "Obálka pro starostu",
          "sila": 2,
          "tag": "uplatek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": false,
          "id": "vyplata-dopredu",
          "nazev": "Výplata dopředu",
          "sila": 3,
          "tag": "uplatek",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "bedna-na-ochutnavku",
          "nazev": "Bedna na ochutnávku",
          "sila": 3,
          "tag": "uplatek",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Jednání s gangem",
    "nodeIndex": 2,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 0,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": false,
    "seq": 31,
    "type": "node_resolved",
    "uzel": "rival-parley",
    "zar": 4,
    "zbyvaBeden": 6,
  },
  {
    "nabidnuto": [
      "farmar-brod",
      "mesto-houkacky",
    ],
    "nodeIndex": 3,
    "seq": 32,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 3,
    "seq": 33,
    "type": "route_chosen",
    "volba": "mesto-houkacky",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "skok-do-reky",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 3,
    "postava": "postava-1",
    "seq": 34,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "clun-po-kanale",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 3,
    "postava": "postava-2",
    "seq": 35,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zadni-vratka",
      "sila": 1,
      "tag": "utek",
    },
    "nodeIndex": 3,
    "postava": "postava-3",
    "seq": 36,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "pohrebni-vuz",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 3,
    "postava": "postava-4",
    "seq": 37,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 2,
    "postava": "postava-1",
    "seq": 38,
    "type": "injury_added",
  },
  {
    "karta": "podvrtnuty-kotnik",
    "nodeIndex": 3,
    "pocetZraneni": 2,
    "postava": "postava-1",
    "seq": 39,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 2,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-1",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 40,
    "sila": 3,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "hlucna_karta",
    "nodeIndex": 3,
    "novaHodnota": 5,
    "seq": 41,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 3,
    "prah": 5,
    "seq": 42,
    "type": "heat_threshold",
  },
  {
    "duvod": "rider_utek",
    "nodeIndex": 3,
    "postava": "postava-2",
    "seq": 43,
    "type": "crate_lost",
    "zbyvaBeden": 5,
  },
  {
    "delta": 2,
    "duvod": "tvrdost_uzlu",
    "nodeIndex": 3,
    "novaHodnota": 7,
    "seq": 44,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 3,
    "prah": 7,
    "seq": 45,
    "type": "heat_threshold",
  },
  {
    "afinita": 2,
    "hod": 1,
    "modifikatory": -2,
    "nodeIndex": 3,
    "pasmo": "selhani",
    "postava": "postava-2",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": {
      "typ": "utek",
      "volba": "bedna",
    },
    "seq": 46,
    "sila": 3,
    "soucet": 2,
    "tvrdostAplikovana": "zar",
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 47,
    "sila": 1,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 1,
    "postava": "postava-4",
    "seq": 48,
    "type": "injury_added",
  },
  {
    "afinita": 0,
    "hod": 2,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 49,
    "sila": 3,
    "soucet": 5,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "selhani_v_uzlu",
    "nodeIndex": 3,
    "novaHodnota": 8,
    "seq": 50,
    "type": "heat_changed",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 2,
        "karta": {
          "hlucna": false,
          "id": "skok-do-reky",
          "nazev": "Skok do řeky",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 1,
        "dobrovolna": true,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "clun-po-kanale",
          "nazev": "Člun po kanále",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "selhani",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": {
          "typ": "utek",
          "volba": "bedna",
        },
        "soucet": 2,
        "tvrdost_aplikovana": "zar",
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": false,
          "id": "zadni-vratka",
          "nazev": "Zadní vrátka",
          "sila": 1,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 2,
        "karta": {
          "hlucna": false,
          "id": "pohrebni-vuz",
          "nazev": "Pohřební vůz",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 5,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Houkačky v Albany",
    "nodeIndex": 3,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 1,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": true,
    "seq": 51,
    "type": "node_resolved",
    "uzel": "mesto-houkacky",
    "zar": 8,
    "zbyvaBeden": 5,
  },
  {
    "nodeIndex": 3,
    "pronasledovatel": "agent-malone",
    "seq": 52,
    "type": "ambush_inserted",
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zpev-opilce",
      "sila": 1,
      "tag": "lest",
    },
    "nodeIndex": 3,
    "postava": "postava-1",
    "seq": 53,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "falesna-kontrola",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 3,
    "postava": "postava-2",
    "seq": 54,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "salva-do-stropu",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 3,
    "postava": "postava-3",
    "seq": 55,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zkazena-tlacenka",
      "sila": 2,
      "tag": "lest",
    },
    "nodeIndex": 3,
    "postava": "postava-4",
    "seq": 56,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 3,
    "postava": "postava-1",
    "seq": 57,
    "type": "injury_added",
  },
  {
    "karta": "kocovina",
    "nodeIndex": 3,
    "pocetZraneni": 3,
    "postava": "postava-1",
    "seq": 58,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-1",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 59,
    "sila": 1,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech",
    "postava": "postava-2",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 60,
    "sila": 3,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "hlucna_karta",
    "nodeIndex": 3,
    "novaHodnota": 9,
    "seq": 61,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 1,
    "postava": "postava-3",
    "seq": 62,
    "type": "injury_added",
  },
  {
    "delta": 1,
    "duvod": "tvrdost_uzlu",
    "nodeIndex": 3,
    "novaHodnota": 10,
    "seq": 63,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 3,
    "prah": 10,
    "seq": 64,
    "type": "heat_threshold",
  },
  {
    "afinita": 0,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "selhani",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 65,
    "sila": 3,
    "soucet": 4,
    "tvrdostAplikovana": "zar",
    "type": "check_resolved",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 2,
    "postava": "postava-4",
    "seq": 66,
    "type": "injury_added",
  },
  {
    "karta": "roztresene-ruce",
    "nodeIndex": 3,
    "pocetZraneni": 2,
    "postava": "postava-4",
    "seq": 67,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-4",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 68,
    "sila": 2,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "lecka",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": false,
          "id": "zpev-opilce",
          "nazev": "Zpěv opilce",
          "sila": 1,
          "tag": "lest",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "falesna-kontrola",
          "nazev": "Falešná kontrola",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 1,
        "karta": {
          "hlucna": true,
          "id": "salva-do-stropu",
          "nazev": "Salva do stropu",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "selhani",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 4,
        "tvrdost_aplikovana": "zar",
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "zkazena-tlacenka",
          "nazev": "Zkažená tlačenka",
          "sila": 2,
          "tag": "lest",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Léčka: Federální agent Malone",
    "nodeIndex": 3,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 2,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": true,
    "seq": 69,
    "type": "node_resolved",
    "uzel": "agent-malone-lecka",
    "zar": 10,
    "zbyvaBeden": 5,
  },
  {
    "nodeIndex": 3,
    "pronasledovatel": "agent-malone",
    "seq": 70,
    "type": "confrontation_started",
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": true,
      "id": "rudo-pred-ocima",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 3,
    "postava": "postava-1",
    "seq": 71,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "konve-na-mleko",
      "sila": 2,
      "tag": "lest",
    },
    "nodeIndex": 3,
    "postava": "postava-2",
    "seq": 72,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zkazena-tlacenka",
      "sila": 2,
      "tag": "lest",
    },
    "nodeIndex": 3,
    "postava": "postava-3",
    "seq": 73,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "sekacek-na-led",
      "sila": 2,
      "tag": "nasili",
    },
    "nodeIndex": 3,
    "postava": "postava-4",
    "seq": 74,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 4,
    "postava": "postava-1",
    "seq": 75,
    "type": "injury_added",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 4,
    "postava": "postava-1",
    "seq": 76,
    "type": "character_down",
  },
  {
    "afinita": 0,
    "hod": 5,
    "modifikatory": -2,
    "nodeIndex": 3,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 77,
    "sila": 3,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 3,
    "postava": "postava-2",
    "seq": 78,
    "type": "injury_added",
  },
  {
    "karta": "ztrata-dustojnosti",
    "nodeIndex": 3,
    "pocetZraneni": 3,
    "postava": "postava-2",
    "seq": 79,
    "type": "cursed_drawn",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 4,
    "postava": "postava-2",
    "seq": 80,
    "type": "injury_added",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 4,
    "postava": "postava-2",
    "seq": 81,
    "type": "character_down",
  },
  {
    "afinita": 0,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "selhani",
    "postava": "postava-2",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 82,
    "sila": 2,
    "soucet": 3,
    "tvrdostAplikovana": "zraneni",
    "type": "check_resolved",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 2,
    "postava": "postava-3",
    "seq": 83,
    "type": "injury_added",
  },
  {
    "karta": "krec",
    "nodeIndex": 3,
    "pocetZraneni": 2,
    "postava": "postava-3",
    "seq": 84,
    "type": "cursed_drawn",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 3,
    "postava": "postava-3",
    "seq": 85,
    "type": "injury_added",
  },
  {
    "karta": "prazdne-kapsy",
    "nodeIndex": 3,
    "pocetZraneni": 3,
    "postava": "postava-3",
    "seq": 86,
    "type": "cursed_drawn",
  },
  {
    "afinita": 0,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "selhani",
    "postava": "postava-3",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 87,
    "sila": 2,
    "soucet": 2,
    "tvrdostAplikovana": "zraneni",
    "type": "check_resolved",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 3,
    "postava": "postava-4",
    "seq": 88,
    "type": "injury_added",
  },
  {
    "karta": "zbrklost",
    "nodeIndex": 3,
    "pocetZraneni": 3,
    "postava": "postava-4",
    "seq": 89,
    "type": "cursed_drawn",
  },
  {
    "afinita": 0,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-4",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 90,
    "sila": 2,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "konfrontace",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 5,
        "karta": {
          "hlucna": true,
          "id": "rudo-pred-ocima",
          "nazev": "Rudo před očima",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "konve-na-mleko",
          "nazev": "Konve na mléko",
          "sila": 2,
          "tag": "lest",
        },
        "pasmo": "selhani",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 3,
        "tvrdost_aplikovana": "zraneni",
        "zoufala": false,
        "zraneni_pridana": 2,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "zkazena-tlacenka",
          "nazev": "Zkažená tlačenka",
          "sila": 2,
          "tag": "lest",
        },
        "pasmo": "selhani",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 2,
        "tvrdost_aplikovana": "zraneni",
        "zoufala": false,
        "zraneni_pridana": 2,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": true,
          "id": "sekacek-na-led",
          "nazev": "Sekáček na led",
          "sila": 2,
          "tag": "nasili",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Konfrontace: Federální agent Malone",
    "nodeIndex": 3,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-2",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 3,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": true,
    "seq": 91,
    "type": "node_resolved",
    "uzel": "agent-malone-konfrontace",
    "zar": 10,
    "zbyvaBeden": 5,
  },
  {
    "delta": -7,
    "duvod": "preziti_konfrontace",
    "nodeIndex": 3,
    "novaHodnota": 3,
    "seq": 92,
    "type": "heat_changed",
  },
  {
    "nabidnuto": [
      "deputy-hlidka",
      "nadrazi-vypravci",
    ],
    "nodeIndex": 4,
    "seq": 93,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 4,
    "seq": 94,
    "type": "route_chosen",
    "volba": "deputy-hlidka",
    "zatah": false,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-lez",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 4,
    "postava": "postava-3",
    "seq": 95,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-cigareta",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 4,
    "postava": "postava-4",
    "seq": 96,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "nodeIndex": 4,
    "pocetZraneni": 4,
    "postava": "postava-3",
    "seq": 97,
    "type": "injury_added",
  },
  {
    "nodeIndex": 4,
    "pocetZraneni": 4,
    "postava": "postava-3",
    "seq": 98,
    "type": "character_down",
  },
  {
    "afinita": 0,
    "hod": 1,
    "modifikatory": 2,
    "nodeIndex": 4,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 99,
    "sila": 3,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 100,
    "sila": 3,
    "soucet": 10,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "posledni-lez",
          "nazev": "Poslední lež",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 5,
        "karta": {
          "hlucna": false,
          "id": "posledni-cigareta",
          "nazev": "Poslední cigareta",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 10,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Silniční hlídka",
    "nodeIndex": 4,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-2",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-3",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 3,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": false,
    "seq": 101,
    "type": "node_resolved",
    "uzel": "deputy-hlidka",
    "zar": 3,
    "zbyvaBeden": 5,
  },
  {
    "nabidnuto": [
      "urednik-vaha",
      "urednik-razitko",
    ],
    "nodeIndex": 5,
    "seq": 102,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 5,
    "seq": 103,
    "type": "route_chosen",
    "volba": "urednik-razitko",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "knezsky-kolarek",
      "sila": 2,
      "tag": "lest",
    },
    "nodeIndex": 5,
    "postava": "postava-4",
    "seq": 104,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "nodeIndex": 5,
    "pocetZraneni": 4,
    "postava": "postava-4",
    "seq": 105,
    "type": "injury_added",
  },
  {
    "nodeIndex": 5,
    "pocetZraneni": 4,
    "postava": "postava-4",
    "seq": 106,
    "type": "character_down",
  },
  {
    "afinita": 2,
    "hod": 1,
    "modifikatory": 3,
    "nodeIndex": 5,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-4",
    "postihZraneni": 3,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 107,
    "sila": 2,
    "soucet": 5,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "knezsky-kolarek",
          "nazev": "Kněžský kolárek",
          "sila": 2,
          "tag": "lest",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 5,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Chybějící razítko",
    "nodeIndex": 5,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-2",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-3",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-4",
        "vyrazena": true,
        "zraneni": 4,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": false,
    "seq": 108,
    "type": "node_resolved",
    "uzel": "urednik-razitko",
    "zar": 3,
    "zbyvaBeden": 5,
  },
  {
    "cile": [
      {
        "body": 0,
        "cil": "samou-modrinu",
        "postava": "postava-1",
        "splnen": false,
        "textovy": false,
      },
      {
        "body": 0,
        "cil": "frajer-v-klidu",
        "postava": "postava-2",
        "splnen": false,
        "textovy": false,
      },
      {
        "body": 0,
        "cil": "obetni-beranek",
        "postava": "postava-3",
        "splnen": false,
        "textovy": false,
      },
      {
        "body": 0,
        "cil": "mozek-operace",
        "postava": "postava-4",
        "splnen": null,
        "textovy": true,
      },
    ],
    "nodeIndex": 5,
    "pocetUzlu": 4,
    "pricina": "vsichni_vyrazeni",
    "seq": 109,
    "type": "run_ended",
    "vysledek": "NEVYRESENO",
    "zar": 3,
    "zbyvaBeden": 5,
  },
]
`;
